# fitparse-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Profile.json  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: fit_to_json.rs  streaming.rs
fitparser/: Cargo.toml
fitparser/benches/: fit_decode.rs
fitparser/examples/: fit_to_json.rs  streaming.rs
fitparser/src/: error.rs  lib.rs
fitparser/src/de/: crc.rs  decode.rs  mod.rs  parser.rs
fitparser/src/profile/: decode.rs  field_types.rs  messages.rs  mod.rs
fitparser/tests/fixtures/: hrv-activity.fit
generate-fit-profile/: Cargo.toml
generate-fit-profile/src/: decode.rs  field_types.rs  main.rs  messages.rs  parse.rs  parse.rs.old
reference-implentation/: makefile
reference-implentation/src/: fit-ref-gen.cpp
src/: error.rs  lib.rs  objects.rs  parser.rs
src/de/: decode.rs  mod.rs  parser.rs
src/profile/: field_types.rs  messages.rs  mod.rs  parser.rs
src/ser/: mod.rs
tests/fixtures/: ZeroHeaderCrc.fit
validate-decoder/: Cargo.toml
validate-decoder/src/: error.rs  fit-ref-gen.cpp  main.rs
