[package]
name = "fitparser"
version = "0.1.1"
authors = ["Matthew Stadelman <stadelmanma@gmail.com>"]
edition = "2018"
description = "A utility to parse ANT .FIT files and allow their contents to be serialized with serde."
license = "MIT"

[build-dependencies]
calamine = "0.16.1"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nom = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
