[package]
name = "fitparser"
version = "0.9.0"
authors = ["Matthew Stadelman <stadelmanma@gmail.com>"]
edition = "2021"
description = "A utility to parse ANT .FIT files and allow their contents to be serialized with serde."
license = "MIT"
repository = "https://github.com/stadelmanma/fitparse-rs"
readme = "../README.md"
documentation = "https://docs.rs/fitparser"
keywords = ["ant", "fit", "garmin", "serde"]
categories = ["encoding", "parser-implementations"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nom = "7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
structopt = "0.3"
serde_json = { version = "1.0" }
