[package]
name = "generate-fit-profile"
version = "0.0.1"
authors = ["Matthew Stadelman <stadelmanma@gmail.com>"]
edition = "2018"
description = "A private crate used to parse the FIT-SDK Profile.xlsx file to generate rust code."
license = "MIT"
repository = "https://github.com/stadelmanma/fitparse-rs"
readme = "README.md"
keywords = ["ant", "fit", "garmin"]

[dependencies]
calamine = { git = "https://github.com/stadelmanma/calamine.git", branch = "fix-empty-formats-treated-as-date" }
structopt = "0.3"
