[package]
name = "validate-fitparser"
version = "0.0.1"
authors = ["Matthew Stadelman <stadelmanma@gmail.com>"]
edition = "2018"
description = "A private crate used to check our decoder output against the FIT SDK."
license = "MIT"
repository = "https://github.com/stadelmanma/fitparse-rs"
readme = "README.md"
keywords = ["ant", "fit", "garmin"]

[dependencies]
structopt = "0.3"
fitparser = { path = "../fitparser" }
